Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10932

libcfs SMP has improper handling of failure paths

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.12.0
    • Lustre 2.11.0, Lustre 2.12.0, Lustre 2.10.4
    • 3
    • 9223372036854775807

      Whil porting the LU-8703 and LU-7734 work upstrream Dan Carpenter pointed out errors in our error patch handling in both cfs_cpt_table_alloc() and cfs_cpu_init().

            simmonsja James A Simmons
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: